tests/specs/ecosystem/halvardm/nessie/0_0_0_1.test
halvardm/nessie/0.0.0-1
-- deno.lock --

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
    --> /vendor/deno.land/x/cliffy@v1.0.0-rc.3/command/command.ts:2801:10
     | 
2801 |   public getCompletions() {
     |          ^^^^^^^^^^^^^^ this function is missing an explicit return type
     = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
    --> /vendor/deno.land/x/cliffy@v1.0.0-rc.3/command/command.ts:2801:10
     | 
2801 |   public getCompletions() {
     |          ^^^^^^^^^^^^^^ this function is missing an explicit return type
     = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


